<resources>
    <string name="app_name">My Application</string>
    <string name="buttonFive">5</string>
    <string name="buttonOne">1</string>
    <string name="buttonThree">3</string>
    <string name="buttonSeven">7</string>
    <string name="buttonNine">9</string>
    <string name="buttonTwo">2</string>
    <string name="buttonSex">6</string>
    <string name="buttonEight">8</string>
    <string name="buttonFour">4</string>
    <string name="buttonZero">0</string>
    <string name="buttonDot">.</string>
    <string name="buttonClear">C</string>
    <string name="buttonInterest">%</string>
    <string name="buttonPlusMinus">+/-</string>
    <string name="buttonDivision">/</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonMinus">-</string>
    <string name="buttonPlus">+</string>
    <string name="buttonEquals">=</string>
</resources>
